--- a/html_project/just_made/index.html
+++ b/html_project/just_made/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>DOgs</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <nav>
+    <nav class="nav">
       <div>
         <a href="#nav">Navbar</a>
         <ul>
