--- a/html_project/just_made/index.html
+++ b/html_project/just_made/index.html
@@ -9,27 +9,29 @@
   </head>
   <body>
     <nav class="nav">
+      <a href="#nav" style="text-decoration: none;color:black;    margin-top: 6px;
+
+      ">Navbar</a>
       <div>
-        <a href="#nav">Navbar</a>
-        <ul>
+        <ul  class="lil" >
           <li>
             <a href="#home">HOME</a>
           </li>
           <li><a href="#link">LINK</a></li>
           <li>
             <a href="#dropdown">DROPDOWN</a>
-            <ul>
+            <!-- <ul>
               <li><a href="#another">another</a></li>
               <li><a href="#anotheraction">ANOTHER ACTION</a></li>
               <li><hr /></li>
-            </ul>
+            </ul> -->
           </li>
         </ul>
-        <form action="#php">
+      </div>
+        <form action="#php" id="search-bar">
           <input type="text" placeholder="search" />
           <button type="submit">SEARCH</button>
         </form>
-      </div>
     </nav>
     <main>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga quae accusantium aliquam deleniti quisquam pariatur iure veniam omnis natus unde qui tempora nisi ducimus delectus sequi, soluta quam consequatur odio.</p>
