--- a/html_project/just_made/index.html
+++ b/html_project/just_made/index.html
@@ -6,7 +6,7 @@
 
     <title>DOgs</title>
     <link rel="stylesheet" href="style.css">
-  </head>
+    <link rel="icon" type="image/png" href="favicon/icons8-insta-windows-11-color-32.png">  </head>
   <body>
     <nav class="nav">
       <a href="#nav" style="text-decoration: none;color:black;    margin-top: 6px;
