--- a/html_project/amazon/index.html
+++ b/html_project/amazon/index.html
@@ -29,13 +29,25 @@
       </div>
       <div class="nav-search">
         <select name="search" id="all" class="search-select">
-            <option value="all">all</option>
+            <option  class ="all" value="all">All</option>
         </select>
         <input type="text" placeholder="Search Amazon" class="search-input">
         <div class="search-icon">
             <i class="fa-solid fa-magnifying-glass"></i>
         </div>
       </div>
+      <div class="nav-signin">
+          <p><span>Hello, sign in</span></p>
+          <p class="nav-second">Account & Lists</p>
+        </div>
+      <div class="nav-signin">
+          <p><span>Return</span></p>
+          <p class="nav-second">& Orders</p>
+        </div>
+        <div class="nav-cart border">
+          <i class="fa-solid fa-cart-shopping"></i>
+          cart
+        </div>
     </div>
     </header>
   </body>
