--- a/html_project/amazon/index.html
+++ b/html_project/amazon/index.html
@@ -19,28 +19,28 @@
         <div class="nav-logo border">
           <div class="logo"></div>
         </div>
-      
-      <div class="nav-address border">
-        <p class="add-first">Deliver to</p>
-        <div class="add-icon">
-          <i class="fa-solid fa-location-dot"></i>
-          <p class="add-second">India</p>
+
+        <div class="nav-address border">
+          <p class="add-first">Deliver to</p>
+          <div class="add-icon">
+            <i class="fa-solid fa-location-dot"></i>
+            <p class="add-second">India</p>
+          </div>
         </div>
-      </div>
-      <div class="nav-search">
-        <select name="search" id="all" class="search-select">
-            <option  class ="all" value="all">All</option>
-        </select>
-        <input type="text" placeholder="Search Amazon" class="search-input">
-        <div class="search-icon">
+        <div class="nav-search">
+          <select name="search" id="all" class="search-select">
+            <option class="all" value="all">All</option>
+          </select>
+          <input type="text" placeholder="Search Amazon" class="search-input" />
+          <div class="search-icon">
             <i class="fa-solid fa-magnifying-glass"></i>
+          </div>
         </div>
-      </div>
-      <div class="nav-signin">
+        <div class="nav-signin">
           <p><span>Hello, sign in</span></p>
           <p class="nav-second">Account & Lists</p>
         </div>
-      <div class="nav-signin">
+        <div class="nav-signin">
           <p><span>Return</span></p>
           <p class="nav-second">& Orders</p>
         </div>
@@ -48,7 +48,23 @@
           <i class="fa-solid fa-cart-shopping"></i>
           cart
         </div>
-    </div>
+      </div>
+      <div class="panel">
+        <div class="panel-all">
+          <i class="fa-solid fa-bars"></i>
+          ALL
+        </div>
+        <div class="panel-ops">
+          <p>Today's Deals</p>
+          <p>Customer Service</p>
+          <p>Registry</p>
+          <p>Gift Cards</p>
+          <p>Sell</p>
+        </div>
+        <div class="panel-deals">
+          SHOP DEALS IN ELECTORNICS
+        </div>
+      </div>
     </header>
   </body>
 </html>
