--- a/html_project/amazon/index.html
+++ b/html_project/amazon/index.html
@@ -66,5 +66,9 @@
         </div>
       </div>
     </header>
+    <div class="hero-section">
+      <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. <a href="#">Click here to go to amazon.in</a>
+      </p>
+    </div>
   </body>
 </html>
