result is amazing

--- a/javascript_project/rock-paper/index.html
+++ b/javascript_project/rock-paper/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scioors</title>
+    <title>Rock Paper scissors</title>
 </head>
 <body>
+    <h1>Rock Paper Scissors game</h1>
+    <h2>Computer's choice :&nbsp; <span id="computer-choice"> </span></h2>
+    <h2>Your's choice :&nbsp;<span id="user-choice"> </span></h2>
+    <h2>Result:&nbsp;<span id="result"> </span></h2>
     
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissor">Scissor</button>
     <script src="app.js"></script>
 </body>
 </html>
