hold option trigger

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             cursor: url(rocket.png), auto;
         }
         #he{
-            cursor: url(rsz_ben-10-omnitrix-animated-custom-cursor2.png) , auto;
+            cursor: url(rsz_ben-10-omnitrix-animated-custom-cursor2.pngs) , auto;
             width: 500px;
             height: 500px;
         }
